# pipecolor

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: regression.yml  release.yml
sample/: access_log  demo.toml  maillog  pipecolor.toml
src/: colorize.rs  core.rs  lib.rs  main.rs  read_timeout.rs
