[package]
name = "pipecolor"
version = "0.4.3-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/pipecolor"
categories = ["command-line-utilities", "value-formatting"]
license = "MIT"
readme = "README.md"
description = "A terminal filter to colorize output"
edition = "2018"

[badges]
travis-ci = { repository = "dalance/pipecolor" }
codecov   = { repository = "dalance/pipecolor", branch = "master", service = "github" }

[dependencies]
atty              = "0.2.14"
dirs              = "3.0.1"
error-chain       = "0.12.1"
memchr            = "2.3.4"
nix               = "0.10.0"
regex             = "1.4.2"
serde             = "1.0.117"
serde_derive      = "1.0.117"
structopt         = "0.2.5"
termion           = "1.5.5"
timeout-readwrite = "0.1.0"
toml              = "0.5.7"

[target.x86_64-unknown-linux-gnu.dependencies]
proc-reader = "0.4.0"

[target.x86_64-unknown-linux-musl.dependencies]
proc-reader = "0.4.0"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
