[package]
name = "pipecolor"
version = "0.4.4"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/pipecolor"
categories = ["command-line-utilities", "value-formatting"]
license = "MIT"
readme = "README.md"
description = "A terminal filter to colorize output"
edition = "2018"

[badges]
travis-ci = { repository = "dalance/pipecolor" }
codecov   = { repository = "dalance/pipecolor", branch = "master", service = "github" }

[dependencies]
anyhow            = "1.0"
atty              = "0.2"
dirs              = "5"
memchr            = "2"
regex             = "1"
serde             = "1"
serde_derive      = "1"
structopt         = "0.3"
termion           = "4"
timeout-readwrite = "0.3"
toml              = "0.8"

[target.x86_64-unknown-linux-gnu.dependencies]
proc-reader = "0.5.1"

[target.x86_64-unknown-linux-musl.dependencies]
proc-reader = "0.5.1"

[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
